# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "parquet-geospatial"
version = { workspace = true }
license = { workspace = true }
description = "Apache Parquet Geometry and Geography implementation in Rust"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
keywords = ["arrow", "parquet", "geometry", "geography"]
readme = "README.md"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
arrow-schema = { workspace = true }
geo-traits = { version = "0.3" }
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["std"]}
wkb = { version = "0.9.1" }

[dev-dependencies]
wkt = { version = "0.14" }

[lib]
name = "parquet_geospatial"
bench = false
