# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "python-integration-testing"
description = "Binaries used for testing parquet-rs compatibility (NOT published to crates.io)"
publish = false
edition = "2021"


[dependencies]
arrow = { path = "../arrow", features = ["prettyprint"] }
parquet = { path = "../parquet", features = ["arrow"]}
serde = "1.0.203"
serde_json = { version = "1.0", default-features = false, features = ["std"] }
pretty_assertions = "1.4.0"