# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "parquet-variant-compute"
version = { workspace = true }
license = { workspace = true }
description = "Apache Parquet Variant Batch Processing"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
keywords = ["arrow", "parquet", "variant"]
edition = { workspace = true }
rust-version = { workspace = true }


[dependencies]
arrow = { workspace = true , features = ["canonical_extension_types"]}
arrow-schema = { workspace = true }
half = { version = "2.1", default-features = false }
indexmap = "2.10.0"
parquet-variant = { workspace = true }
parquet-variant-json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.18.0", features = ["v4"]}

[lib]
name = "parquet_variant_compute"
bench = false

[dev-dependencies]
rand = "0.9.1"
criterion = { workspace = true, default-features = false }
arrow = { workspace = true, features = ["test_utils"] }


[[bench]]
name = "variant_kernels"
harness = false
