# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "parquet-variant"
# This package is still in development and thus the version does
# not follow the versions of the rest of the crates in this repo.
version = "0.1.0"
license = { workspace = true }
description = "Apache Parquet Variant implementation in Rust"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
keywords = ["arrow", "parquet", "variant"]
readme = "README.md"
edition = { workspace = true }
# needs a newer version than workspace due to
# rror: `Option::<T>::unwrap` is not yet stable as a const fn
rust-version = "1.83"

[dependencies]
arrow-schema = { workspace = true }
chrono = { workspace = true }
serde_json = "1.0"
base64 = "0.22"
indexmap = "2.10.0"


[lib]
name = "parquet_variant"
bench = false

[dev-dependencies]
paste = { version = "1.0" }
criterion = { version = "0.6", default-features = false }
rand = { version = "0.9", default-features = false, features = [
    "std",
    "std_rng",
    "thread_rng",
] }


[[bench]]
name = "variant_builder"
harness = false
