# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "parquet-variant"
version = { workspace = true }
license = { workspace = true }
description = "Apache Parquet Variant implementation in Rust"
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
keywords = ["arrow", "parquet", "variant"]
readme = "README.md"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
arrow-schema = { workspace = true }
chrono = { workspace = true }
half = { version = "2.1", default-features = false }
indexmap = "2.10.0"
uuid = { version = "1.18.0", features = ["v4"]}

simdutf8 = { workspace = true , optional = true }

[lib]
name = "parquet_variant"
bench = false

[dev-dependencies]
paste = { version = "1.0" }
criterion = { workspace = true, default-features = false }
rand = { version = "0.9", default-features = false, features = [
    "std",
    "std_rng",
    "thread_rng",
] }

[features]
default = ["simdutf8"]
# Enable SIMD UTF-8 validation
simdutf8 = ["dep:simdutf8"]

[[bench]]
name = "variant_builder"
harness = false

[[bench]]
name = "variant_validation"
harness = false
